--- a/20220110/12_listQ1.html
+++ b/20220110/12_listQ1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>재미있는 웹툰 모음</title>
 </head>
 <body>
     <!--리스트와 a태그를 이용해서 여러분들이 좋아하는 웹툰 링크 모음을
@@ -19,8 +19,6 @@
     <li><a href="https://comic.naver.com/webtoon/list?titleId=762279&weekday=thu">정글쥬스</a>
     <li><a href="https://comic.naver.com/webtoon/list?titleId=747269&weekday=wed">전지적독자시점</a>
     <li><a href="https://comic.naver.com/webtoon/list?titleId=774862&weekday=sat">조조코믹스</a>        
-    
-    
-    </ol>
+     </ol>
 </body>
 </html>
