퍼블리싱싱 5일차

--- a/20220110/01_title.html
+++ b/20220110/01_title.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- 주석은 여닫는부분으로 꺽쇠-- 사이에 작성합니다. 
+    <!-- 주석은 여닫는부분으로 꺽쇠-- >사이에 작성합니다. 
     여러줄로 작성할수 있습니다.
-    title태그는 실제 문ㅁ서 내부가 아닌
+    title태그는 실제 문서 내부가 아닌
     브라우저 탭에 표현될 내용을 바꿔줍니다. -->
     <title>heading태그들</title>
 </head>
