--- a/20220111/01_list/01_listinlist.html
+++ b/20220111/01_list/01_listinlist.html
@@ -10,10 +10,10 @@
     <h1>ICT인재개발원</h1>
     <!--ul 태그 내에 type="타입명"을 지정해서 ul의 도형을 바꿀수있다. 
     
-    dice => 까만 원, squre => 사각형, circle => 속이 빈 원 -->
+    disc => 까만 원, square => 사각형, circle => 속이 빈 원 -->
     <ul>
         <li>회사 소개
-            <ul type="circle">
+            <ul type="square">
                 <li>ceo인사</li>
                 <li>연혁</li>
                 <li>조직도</li>
