--- a/20220111/02_table/01_basictable.html
+++ b/20220111/02_table/01_basictable.html
@@ -11,7 +11,7 @@
     <h2>1행 1열 표 만들기(1 * 1)</h2>
     <!-- table 태그 내에 tr개수로 row 개수가 정해지고
     tr 내부의 td개수로 행 개수가 정해집니다. -->
-    <table>
+    <table border="1">
         <tr>
             <td>1행 1열</td>
         </tr>
