--- a/20220110/05_horizontalline.html
+++ b/20220110/05_horizontalline.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>수평선(구분선</title>
+    <title>수평선(구분선)</title>
 </head>
 <body>
     <h1>구분선 그리기</h1>
