--- a/20220110/06_quotation.html
+++ b/20220110/06_quotation.html
@@ -7,8 +7,8 @@
     <title>인용문</title>
 </head>
 <body>
-    <h1>blockquote태그와 q태그</h1>
-    <h2>blockquots태그 살펴보기</h2>
+    <h1>blockquote태그와  q태그</h1>
+    <h2>blockquote태그 살펴보기</h2>
     <p>이순신 장군의 명언</p>
     <blockquote cite="#" title="이순신 명언">
         <p> 죽고자 하면 살 것이요 살고자 하면 죽을것이다.</p>
