--- a/20220110/10_list1.html
+++ b/20220110/10_list1.html
@@ -7,7 +7,7 @@
     <title>리스트 태그</title>
 </head>
 <body>
-    <!--목록을 나열할때 사용하는 ㄴ태그로 목록은 oL(ordered List, 순차리스트)
+    <!--목록을 나열할때 사용하는 태그로 목록은 oL(ordered List, 순차리스트)
     uL(unorderde List, 비순차리스트) dL(definition List, 정의리스트)
     등이 있습니다. -->
     <h1>순차적 목록</h1>
