--- a/20220111/01_list/03_listinlistQ1.html
+++ b/20220111/01_list/03_listinlistQ1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>리스트 소그이 리스트(중첩리스트)문제</title>
+    <title>리스트 속의 리스트(중첩리스트)문제</title>
 </head>
 <body>
     <ul>
