--- a/20220118/01_jsbasic/16_jscontrolstatement7.html
+++ b/20220118/01_jsbasic/16_jscontrolstatement7.html
@@ -10,11 +10,11 @@
         // ****
         // 형태로 찍어주시면 됩니다. 중첩반복문을 써주세요.
 
-        for(var i = 1; i <=4; i++){
-        for(var j = 1; j <=i; j++){
-            document.write("* <br/>");
+        for(var i = 0; i <4; i++){
+        for(var j = 0; j-1 <i; j++){
+            document.write("*");
         }    
-        document.write();
+        document.write("<br/>");
         }
 
         
