퍼블리싱11일차

--- a/20220111/03_form/01_inputform.html
+++ b/20220111/03_form/01_inputform.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>input요소들</h1>
-    <!--fieldest은 여닫는 부분 사이를 사각형으로 영역을 만들어줌-->
+    <!--fieldset은 여닫는 부분 사이를 사각형으로 영역을 만들어줌-->
     <fieldset>
         <legend>회원가입</legend>
         <p>아이디 : <input type="text"/></p>
